// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UXCaptureEventMark renders component markup 1`] = `
<img
  onLoad={[Function]}
  src="/foo"
/>
`;

exports[`UXCaptureEventMark returns the child element untouched if it has an onLoad prop 1`] = `
<img
  onLoad="alert('hi');"
  src="/foo"
/>
`;
